<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.help.HelpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Surface"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:titleTextAppearance="@style/titleHeader"
            app:titleCentered="true"
            app:title="Bantuan"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="32dp"
            android:paddingHorizontal="24dp"
            android:orientation="vertical">

            <TextView
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_problem_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/cardSubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_problem_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/order_problem_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/cardSubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_problem_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>