<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/menu_nearby"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:src="@drawable/ic_menu_nearby"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menu_promotion"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/cardTitleStyle"
            android:id="@+id/tv_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearby"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/menu_nearby"
            app:layout_constraintStart_toStartOf="@+id/menu_nearby"
            app:layout_constraintTop_toBottomOf="@+id/menu_nearby" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/menu_promotion"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:src="@drawable/ic_menu_promotion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_nearby"
            app:layout_constraintEnd_toStartOf="@+id/menu_favorite"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/cardTitleStyle"
            android:id="@+id/tv_promotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotion"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/menu_promotion"
            app:layout_constraintStart_toStartOf="@+id/menu_promotion"
            app:layout_constraintTop_toBottomOf="@+id/menu_promotion" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/menu_favorite"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:src="@drawable/ic_menu_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_promotion"
            app:layout_constraintEnd_toStartOf="@+id/menu_help"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/cardTitleStyle"
            android:id="@+id/tv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/menu_favorite"
            app:layout_constraintStart_toStartOf="@+id/menu_favorite"
            app:layout_constraintTop_toBottomOf="@+id/menu_favorite" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/menu_help"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:src="@drawable/ic_menu_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_favorite"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/cardTitleStyle"
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/menu_help"
            app:layout_constraintStart_toStartOf="@+id/menu_help"
            app:layout_constraintTop_toBottomOf="@+id/menu_help" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
